# FoamSprayRobo

./: Dockerfile  docker-compose.yml  start.sh
install/: local_setup.sh  setup.sh
log/: latest_build
src/bim_interface/: CMakeLists.txt  package.xml
src/iiwa_ros2_backup/iiwa_description/config/: iiwa.config.xacro
src/iiwa_ros2_backup/iiwa_description/gazebo/worlds/: iiwa.world
src/iiwa_ros2_backup/iiwa_description/media/materials/scripts/: gazebo.material
src/iiwa_ros2_backup/iiwa_description/meshes/flex_fellow_h800/: model.config  model.sdf
src/iiwa_ros2_backup/iiwa_description/meshes/lbr_iiwa_14_r820/: model.config  model.sdf
src/robot_insulation/: CMakeLists.txt  package.xml  plugins.xml
src/robot_insulation/config/: controllers.yaml
src/robot_insulation/include/kuka_iiwa_hardware/: kuka_iiwa_hardware.hpp
src/robot_insulation/launch/: gazebo_sim.launch.py  iiwa7_upload.py
src/robot_insulation/media/materials/scripts/: gazebo.material
src/robot_insulation/meshes/iiwa7/visual/: link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
src/robot_insulation/meshes/visual/: axis.dae
src/robot_insulation/scripts/: convert_meshes.sh
src/robot_insulation/src/: kuka_iiwa_hardware.cpp
src/robot_insulation/urdf/: iiwa.gazebo.xacro  iiwa.transmission.xacro  iiwa7.xacro  kuka_iiwa.urdf.xacro  wall_model.sdf
src/visualization/: CMakeLists.txt  package.xml
