<?xml version="1.0"?>
<package format="2">
  <name>robot_insulation</name>
  <version>1.4.0</version>
  <description>This package contains the URDF of the KUKA LBR IIWA robot</description>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>
  <license>BSD</license>

  <!-- Build system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>xacro</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
